dashboard card alignedment fixed

--- a/client/src/pages/Bills/Bills.css
+++ b/client/src/pages/Bills/Bills.css
@@ -1,7 +1,7 @@
 .BillsContainer{
     display: flex;
     flex-direction: row !important;
-    width: 100vw;
+    width: 90vw;
 
 }
 .BillsCardContainer{
@@ -11,6 +11,7 @@
     margin-left: 30vw;
     margin-top: 2vw;
  justify-items: center;
+ align-items: center;
 
 }
 
