--- a/client/src/pages/CollectionReceipt/CollectionReceipt.css
+++ b/client/src/pages/CollectionReceipt/CollectionReceipt.css
@@ -1,7 +1,7 @@
 .CollectionReceiptContainer{
     display: flex;
     flex-direction: row !important;
-    width: 100vw;
+    width: 90vw;
 
 }
 .CollectionReceiptCardContainer{
@@ -10,7 +10,8 @@
     width: 100vw !important;
     margin-left: 30vw;
     margin-top: 2vw;
- justify-items: center;
+    align-items: center;
+     justify-items: center;
 
 }
 
