--- a/client/src/pages/PettyCash/PettyCash.css
+++ b/client/src/pages/PettyCash/PettyCash.css
@@ -1,7 +1,7 @@
 .PettyCashContainer{
     display: flex;
     flex-direction: row !important;
-    width: 100vw;
+    width: 90vw;
 
 }
 .PettyCashCardContainer{
@@ -11,6 +11,7 @@
     margin-left: 30vw;
     margin-top: 2vw;
  justify-items: center;
+ align-items: center;
 
 }
 
